<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/note_about_background"
              android:padding="5dp">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/notes_about_header">

        <ImageView android:id="@+id/note_about_icon"
                   android:layout_height="wrap_content"
                   android:layout_width="wrap_content"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="10dp"
                   android:src="@drawable/icon"
                   android:contentDescription="@string/note_about_icon"/>

        <TextView android:id="@+id/note_about_app_name"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:layout_toRightOf="@id/note_about_icon"
                  android:layout_marginTop="10dp"
                  android:text="@string/app_name"
                  android:textColor="#ff4e4737"
                  android:textSize="30sp"/>

        <TextView android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:text="v1.5.1"
                  android:textColor="#ffcc0000"
                  android:layout_marginLeft="8dp"
                  android:textSize="16.0sp"
                  android:layout_alignBottom="@id/note_about_app_name"
                  android:layout_toRightOf="@id/note_about_app_name"/>
    </RelativeLayout>


    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/notes_about_text"
               android:layout_gravity="center_horizontal"
               android:layout_marginTop="15dp"
               android:contentDescription="@string/note_about_text"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="20dp"
              android:autoLink="web"
              android:text="@string/note_about_content"
              android:textColor="#ff000000"
              android:textColorLink="#ffda842f"
              android:textSize="15sp"
              android:lineSpacingMultiplier="1.3"/>

    <TextView android:layout_height="wrap_content"
              android:layout_width="match_parent"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/notes_about_commend"
            android:text="@string/note_about_share"
            android:textSize="20sp"/>


</LinearLayout>